# OmniScribe

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENT_TEAM.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROJECT_CONTEXT.md  PROJECT_STATE.md  README.md  VERIFICATION_PLAYBOOK.md  pyproject.toml
.claude/: settings.json  template-manifest.json
.claude/agents/: architect.md  code-reviewer.md  coder.md  python-coder.md  requirements-engineer.md  test-writer.md  tester.md
.github/workflows/: ci.yml
docs/: adding-platforms.md  architecture.md  configuration.md
docs/plans/: 2026-07-16-ocr-det-ab.md  phase-1-foundation-asr.md  phase-2-5-scene-change.md  phase-2-ocr.md  phase-3-platform-profiles.md  phase-4-merge-engine.md  release-v0.1.1.md  sprint-1-2-audio-asr-output.md  sprint-2-1-ocr-foundation.md  sprint-2-1-step-0-preflight.md  sprint-2-2-ocr-preprocess-dedup.md  sprint-3-1-platform-profiles-infra.md  sprint-3-2-ui-filter.md  sprint-5-4-batch-processing.md  sprint-6-1-llm-cleanup-infra.md  sprint-6-2-asr-punctuation-cleanup.md  sprint-7-1-ocr-noise-floor.md  sprint-7-2-cuda12-whisper-dll.md  sprint-7-3-cufft-ort-alignment.md  sprint-7-4-cudnn-sublib-preload.md  sprint-8-1-playlist-support.md
hooks/: block-bash-vcs.sh  enforce-agent-contract.sh  gate-before-merge.sh  no-push-main.sh  pre-commit-test.sh  read-size-gate.sh  require-skills-block.sh  run-gate.sh  tier-before-coder.sh
scripts/: eval_ocr.py  fetch_eval_samples.py
src/omniscribe/: __init__.py  audio.py  batch.py  cli.py  config.py  errors.py  output.py  pipeline.py
src/omniscribe/acquire/: downloader.py  photo.py  platform.py  playlist.py
src/omniscribe/api/: server.py
src/omniscribe/asr/: __init__.py  whisper.py
src/omniscribe/eval/: __init__.py  funnel.py  models.py  scoring.py
src/omniscribe/merge/: __init__.py  llm_cleanup.py
src/omniscribe/ocr/: __init__.py  _text_match.py  bbox_aggregator.py  deduplicator.py  frame_sampler.py  preprocessor.py  protocol.py  rapid_ocr.py  ui_filter.py
tests/: conftest.py  test_api.py  test_audio.py  test_batch.py  test_bbox_aggregator.py  test_cli.py  test_config.py  test_deduplicator.py  test_downloader.py  test_eval_funnel.py  test_eval_integration.py  test_eval_scoring.py  test_fetch_eval_samples.py  test_frame_sampler.py  test_llm_cleanup.py  test_ocr_protocol.py  test_output.py  test_photo.py  test_platform.py  test_platform_profiles.py  test_platform_registry.py  test_playlist.py  test_preprocessor.py  test_rapid_ocr.py  test_text_match.py  test_ui_filter.py  test_whisper.py  test_whisper_dll_shim.py
tests/fixtures/eval/: README.md  example-gt.json
