[project]
name = "omniscribe"
version = "0.1.4"
description = "Extract complete video transcripts — speech AND on-screen text — from TikTok, YouTube, Instagram and more."
readme = "README.md"
license = "MIT"
# onnxruntime-gpu 1.24.x publishes Windows wheels only for cp311/cp312 today.
# Revisit the upper bound once ORT ships cp313 Windows wheels.
requires-python = ">=3.11,<3.13"
authors = [
    { name = "dagonet" },
]
keywords = [
    "transcription",
    "speech-to-text",
    "ocr",
    "video-processing",
    "whisper",
    "rapidocr",
    "tiktok",
    "youtube",
    "instagram",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "faster-whisper>=1.1.0",
    "nvidia-cuda-runtime-cu12>=12,<13 ; sys_platform == 'win32'",
    "nvidia-cublas-cu12>=12,<13       ; sys_platform == 'win32'",
    "nvidia-cudnn-cu12>=9,<10         ; sys_platform == 'win32'",
    "nvidia-cufft-cu12>=11,<12        ; sys_platform == 'win32'",
    "rapidocr>=3.8,<4.0",
    "onnxruntime-gpu>=1.20,<2.0",
    "numpy>=1.26,<3.0",
    "yt-dlp>=2024.0",
    "typer>=0.13",
    "pydantic-settings>=2.0",
    "rapidfuzz>=3.9,<4.0",
    "rich>=13.0",
    "opencv-python-headless>=4.9,<5.0",
]

[project.optional-dependencies]
llm = [
    "ollama>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
omniscribe = "omniscribe.cli:app"

[project.urls]
Homepage = "https://github.com/dagonet/omniscribe"
Repository = "https://github.com/dagonet/omniscribe"
Issues = "https://github.com/dagonet/omniscribe/issues"
Changelog = "https://github.com/dagonet/omniscribe/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniscribe"]

# ── Ruff ──────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "TC001",  # annotation-only imports in tests are fine; pytest runtime needs follow
    "TC002",
    "TC003",
]
"src/omniscribe/cli.py" = [
    "B008",  # typer.Option / typer.Argument defaults are the idiomatic Typer pattern
]

[tool.ruff.lint.isort]
known-first-party = ["omniscribe"]

# ── mypy ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "rapidocr.*",
    "cv2.*",
    "yt_dlp.*",
    "pydub.*",
]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers -m 'not integration'"
markers = [
    "slow: marks tests that require model inference (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a GPU",
    "integration: requires a live local Ollama server; skipped in CI",
]
